--- a/index.html
+++ b/index.html
@@ -5,29 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <title>escocia</title>
 </head>
-<body>
+<body class="bindex">
     <header class="hindex">
         <h1>Escócia</h1>
-        <p>precisa se mudar de país e não sabe por onde começar?</p>
+        <p>Precisa se mudar de país e não sabe por onde começar?</p>
 
-        <a href="Passaport.html" target="_blank">Passaport</a>
-        <a href="financeiro.html" target="_blank">Financeiro</a>
-        <a href="lifestyle.html" target="_blank">LifeStyle</a>
+        <nav>
+            <a href="Passaport.html" target="_blank">Passaport</a>
+            <a href="financeiro.html" target="_blank">Financeiro</a>
+            <a href="lifestyle.html" target="_blank">conceitos gerais</a>
+        </nav>
 
     </header>
     <main class="mindex">
         <h2>A terra mágica</h2>
-        <p>Descubra a terra mágica dos kilts, do uísque e da gaita de foles na Escócia, um dos países mais românticos do planeta. Caminhe pelos cenários de Coração Valente, Outlander e Harry Potter. Experimente o puro malte de uma autêntica destilaria escocesa e encontre o monstro do lago Ness em Inverness. </p>
+        <p>Descubra a terra mágica dos kilts, do whísky e da gaita de foles na Escócia, um dos países mais românticos do planeta. Caminhe pelos cenários de Coração Valente, Outlander e Harry Potter. Experimente o puro malte de uma autêntica destilaria escocesa e encontre o monstro do lago Ness em Inverness. </p>
 
         <p>Você vai se apaixonar por Edimburgo, a capital da Escócia, com suas ruas medievais, castelos, lojas e pubs. A composição entre Cidade Velha e Cidade Nova colocou Edimburgo na lista de patrimônios da UNESCO. Glasgow é a cidade grande, contemporânea, cuja arquitetura e vida noturna atrai visitantes do mundo todo.</p>
-
-        <table>
-            <thead>
-                cvnjnjabbvf
-            </thead>
-        </table>
 
     </main>
     <footer class="findex">
