--- a/lifestyle.html
+++ b/lifestyle.html
@@ -5,16 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
     <title>lifestyle</title>
 </head>
 <body>
-    <header class="hlifestyle">
+    <header class="hconceitos">
 
     </header>
-    <main class="mlifestyle">
+    <main class="mconceitos">
 
     </main>
-    <footer class="flifestyle">
+    <footer class="fconceitos ">
 
     </footer>
     
