--- a/financeiro.html
+++ b/financeiro.html
@@ -9,12 +9,19 @@
     <title>financeiro</title>
 
 </head>
-<body>
+<body class="bfinanceiro">
     <header class="hfinanceiro">
+
+        <h1>Custo de vida na Escócia</h1>
+
+        <nav>
+            <a href="index.html" target="_self">Return</a>
+        </nav>
 
     </header>
     <main class="mfinanceiro">
-        <h2>Custo de vida na Escócia</h2>
+        
+        
           <p>Antes de decidir morar na Escócia, é preciso entender como é o custo de vida por lá. Primeiramente, você deve saber que a moeda oficial do país é a libra esterlina, que é uma das mais valorizadas do mundo. Além disso, costuma ser muito valorizada frente ao real, estando sempre acima dos R$6, pelo menos. Portanto, antes de arrumar as malas, tenha uma boa reserva garantida.</p>
 
          <p>O custo de vida geral é bastante alto, principalmente quando comparado ao brasileiro. Além disso, existem alguns impostos adicionais para serviços locais, como:</p>
