--- a/lifestyle.html
+++ b/lifestyle.html
@@ -6,13 +6,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="favicon-16x16.png" type="image/x-icon">
-    <title>lifestyle</title>
+    <title>conceitos gerais</title>
 </head>
-<body>
+<body class="bconceitos">
     <header class="hconceitos">
+
+        <h1>Conceitos Gerais</h1>
+
+        <nav><a href="index.html">Return</a></nav>
 
     </header>
     <main class="mconceitos">
+        <h2>Culinária</h2>
+
+        <p> O prato típico escocês são os Haggis (miúdos de carneiro condimentados e farinha de aveia), que têm uma forma de chouriço e um paladar muito agreste. E pensar que os comem ao pequeno almoço… De salientar também o famoso Aberdeen Angus Beef, o salmão e a truta.</p>
+
+    <picture >
+        <source media="(max-width:1000px )" srcset="haggis-escoceses-cozinhados-abertos-cortados89532094.jpg">
+    </picture>
+
+        <p>Para quem não aprecie este tipo de cozinha, com predominância em estufados, nem os básicos “fish & chips”, consegue-se também encontrar uma ampla variedade de restaurantes italianos, chineses, indianos, espanhóis e steak-houses.</p>
+
+        <h2>Sistema de Saúde</h2>
+
+        <p>Na Escócia, o Serviço Nacional da Saúde, NHS, administra o setor de saúde pública, que oferece de forma gratuita consultas e medicamentos.</p>
+
+        <h2>sistema Educacional</h2>
+
+         <p>O sistema educacional escocês é muito diferente do resto do Reino Unido. A Escócia exige que todas as pessoas frequentem a escolaridade obrigatória até aos 16 anos.</p>
+
+         <p>A maioria dos jovens na Escócia entra no ensino superior aos 17 anos (em vez de 18). Isso pode ser porque os alunos de primeiro grau da Escócia (ou do resto da UE) que estudam na Escócia não pagam nenhuma taxa direta do curso para seu primeiro diploma de graduação.</p>
+
+         <p>Na Escócia, 15 universidades e três outras instituições de ensino superior são encarregadas de oferecer ensino superior em uma ampla gama de qualificações vocacionais e acadêmicas, incluindo certificados, certificados nacionais superiores, diplomas, diplomas nacionais superiores, bem como uma variedade de fundação, graduação, pós-graduação e pós-graduação.</p>
 
     </main>
     <footer class="fconceitos ">
