foto adicionada de haggis

--- a/lifestyle.html
+++ b/lifestyle.html
@@ -21,9 +21,7 @@
 
         <p> O prato típico escocês são os Haggis (miúdos de carneiro condimentados e farinha de aveia), que têm uma forma de chouriço e um paladar muito agreste. E pensar que os comem ao pequeno almoço… De salientar também o famoso Aberdeen Angus Beef, o salmão e a truta.</p>
 
-    <picture >
-        <source media="(max-width:1000px )" srcset="haggis-escoceses-cozinhados-abertos-cortados89532094.jpg">
-    </picture>
+        <picture><img src="haggis.jpg" width="700px" alt=""></picture>
 
         <p>Para quem não aprecie este tipo de cozinha, com predominância em estufados, nem os básicos “fish & chips”, consegue-se também encontrar uma ampla variedade de restaurantes italianos, chineses, indianos, espanhóis e steak-houses.</p>
 
