--- a/financeiro.html
+++ b/financeiro.html
@@ -36,53 +36,55 @@
      <p>No entanto, esses custos dependem de onde você morar e do tipo de acomodação que possui. Portanto, não entre em pânico, basta consultar o proprietário de sua moradia ou a agência com antecedência. Também, se você está planejando alugar um apartamento ou casa, especialmente em uma cidade grande como Edimburgo, deve estar ciente que alugar de proprietários particulares é mais barato do que em agências.</p>
 
      <h2>apenas uma media</h2>
+     <p>(Libra esterlina)</p>
 
-     <table>
-        <tbody>
-            <tr>
-               <td>Salário Liquido Mensal Médio</td>
-               <td>2.016,98</td>
-            </tr>
-            <tr>
-                <td>Aluguel de apartamento(3 quartos) no Centro da Cidade</td>
-                <td>1.528,65</td>
-            </tr>
-            <tr>
-                <td>Aluguel de apartamento(3 quartos) fora do centro</td>
-                <td>1.165,38</td>
-            </tr>
-            <tr>
-                <td>mensalidade de academia</td>
-                <td>36,03</td>
-            </tr>
-            <tr>
-                <td>mensalidade de intens basicos(eletricidade, aquecimento, arrefecimento, agua e lixo) para um apartamento</td>
-                <td>141,17</td>
-            </tr>
-            <tr>
-                <td>internet</td>
-                <td>29,41</td>
-            </tr>
-            <tr>
-                <td>bilhete unitario de transporte local</td>
-                <td>1,80</td>
-            </tr>
-            <tr>
-                <td>passe mensal de transporte local</td>
-                <td>56,00</td>
-
-            </tr>
-            <tr>
-                <td>custo de refeição em um restaurante economico</td>
-                <td>15,00</td>
-            </tr>
-            <tr>
-                <td>taria de taxi por km rodado</td>
-                <td>1,42</td>
-            </tr>
-           
-        </tbody>
-     </table>
+     <div id="container">
+         <table>
+            <tbody>
+                <tr>
+                   <td>Salário Liquido Mensal Médio</td>
+                   <td>2.016,98</td>
+                </tr>
+                <tr>
+                    <td>Aluguel de apartamento(3 quartos) no Centro da Cidade</td>
+                    <td>1.528,65</td>
+                </tr>
+                <tr>
+                    <td>Aluguel de apartamento(3 quartos) fora do centro</td>
+                    <td>1.165,38</td>
+                </tr>
+                <tr>
+                    <td>mensalidade de academia</td>
+                    <td>36,03</td>
+                </tr>
+                <tr>
+                    <td>mensalidade de intens basicos(eletricidade, aquecimento, arrefecimento, agua e lixo) para um apartamento</td>
+                    <td>141,17</td>
+                </tr>
+                <tr>
+                    <td>internet</td>
+                    <td>29,41</td>
+                </tr>
+                <tr>
+                    <td>bilhete unitario de transporte local</td>
+                    <td>1,80</td>
+                </tr>
+                <tr>
+                    <td>passe mensal de transporte local</td>
+                    <td>56,00</td>
+                </tr>
+                <tr>
+                    <td>custo de refeição em um restaurante economico</td>
+                    <td>15,00</td>
+                </tr>
+                <tr>
+                    <td>taria de taxi por km rodado</td>
+                    <td>1,42</td>
+                </tr>
+         
+            </tbody>
+         </table>
+     </div>
 
 
     </main>
