--- a/lifestyle.html
+++ b/lifestyle.html
@@ -21,7 +21,10 @@
 
         <p> O prato típico escocês são os Haggis (miúdos de carneiro condimentados e farinha de aveia), que têm uma forma de chouriço e um paladar muito agreste. E pensar que os comem ao pequeno almoço… De salientar também o famoso Aberdeen Angus Beef, o salmão e a truta.</p>
 
-        <picture><img src="haggis.jpg" width="700px" alt=""></picture>
+        <picture>
+            <source media="(max-width: 550px)" srcset="haggis-pq.jpg">
+            <img src="haggis-normal.jpg"  alt="imagem do prato tipico">
+    </picture>
 
         <p>Para quem não aprecie este tipo de cozinha, com predominância em estufados, nem os básicos “fish & chips”, consegue-se também encontrar uma ampla variedade de restaurantes italianos, chineses, indianos, espanhóis e steak-houses.</p>
 
