--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav>
             <a href="Passaport.html" target="_blank">Passaport</a>
             <a href="financeiro.html" target="_blank">Financeiro</a>
-            <a href="lifestyle.html" target="_blank">conceitos gerais</a>
+            <a href="lifestyle.html" target="_blank">diversidades</a>
         </nav>
 
     </header>
