--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <p>Precisa se mudar de país e não sabe por onde começar?</p>
 
         <nav>
-            <a href="Passaport.html" target="_blank">Passaport</a>
-            <a href="financeiro.html" target="_blank">Financeiro</a>
-            <a href="lifestyle.html" target="_blank">diversidades</a>
+            <a href="Passaport.html">Passaport</a>
+            <a href="financeiro.html">Financeiro</a>
+            <a href="lifestyle.html">diversidades</a>
         </nav>
 
     </header>
